--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -136,7 +136,7 @@
         </ul>
         <ul class="Per_listUl">
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/MyPlan">
                     <div class="Per_listtu f-l"><img src="~/images/39_5.png"></div>
                     <div class="Per_listRight">
                         <h3>我的计划</h3>
