--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using C8.Lottery.Model;
+@using C8.Lottery.Public;
 @{
     Layout = null;
 
@@ -6,6 +7,8 @@
 
     NewsType newsType = ViewBag.CurrentNewsType;
     long currentNewsTypeId = newsType==null?0:newsType.Id;
+
+    int lType = ViewBag.lType;
 
 }
 @model LotteryType
@@ -44,6 +47,11 @@
     <script type="text/javascript" src="~/js/luo/dropload.js"></script>
     <script type="text/javascript" src="~/js/dialog.min.js"></script>
     <script type="text/javascript" src="~/js/yjp.js"></script>
+    
+    <script type="text/javascript" src="~/js/runTime2.js"></script>
+    
+    
+
 </head>
 
 <body style="background:#F4F4F5;">
@@ -119,12 +127,39 @@
                     <dt><a href="javascript:;"><img src="~/images/@ViewBag.Icon"></a></dt>
                     <dd>
                         <div class="hdM_ddtit">
-                            <h3 class="hdM_ddtqi f-l">第<span>091</span>期</h3>
-                            <p class="hdM_ddtime f-r">下期开奖：<span>02:15</span></p>
+                            <h3 class="hdM_ddtqi f-l">第<span>@ViewBag.lastIssue</span>期</h3>
+                            
+                            @*<p class="hdM_ddtime f-r">下期开奖：<span>02:15</span></p>*@
+                            
+                            
+                            <p class="hdM_ddtime f-r">下期开奖：
+                            
+                                    @if (ViewBag.time == "正在开奖")
+                                    {
+                                        <span id="openTime">正在开奖</span>
+                                    }
+                                    else
+                                    {
+                                        if (lType < 9)
+                                        {
+                                            <span id="openTime"><t id="hour2">@ViewBag.hour</t>:<t id="minute2">@ViewBag.min</t>:<t id="second2">@ViewBag.sec</t></span>
+                                        }
+                                        else
+                                        {
+                                            <span id="openTime"><t id="minute2">@ViewBag.min</t>:<t id="second2">@ViewBag.sec</t></span>
+                                        }
+
+                                    }
+
+                                </p>
+                            
+                            
+
+
                             <div style="clear:both;"></div>
                         </div>
                         <div class="hdM_ddcon">
-                            <span class="hdM_spssc">02</span>
+                            @*<span class="hdM_spssc">02</span>
                             <span class="hdM_spssc">03</span>
                             <span class="hdM_spssc">04</span>
                             <span class="hdM_spssc">05</span>
@@ -132,6 +167,73 @@
                             <span class="hdM_spssc">07</span>
                             <span class="hdM_spliu" style="width:14px;">+</span>
                             <span class="hdM_spssc hdM_spLan">01</span>
+                            *@
+                            
+                            
+                            
+                            
+                             @{
+                                    int countFor6 = 0; 
+                                   
+                                    
+                                    string num = ViewBag.lastNum;
+                                    string[] numArr = num.Split(',');
+
+
+                                    if (lType == 5)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            countFor6++;
+
+                                            string color = Util.GetColor(s);
+                                            string cl = "";
+                                            if (color == "red")
+                                            {
+                                                cl = "hdM_spliu hdM_spliured";
+                                            }
+                                            else if (color == "green")
+                                            {
+                                                cl = "hdM_spliu hdM_spliugreen";
+                                            }
+                                            else
+                                            {
+                                                cl = "hdM_spliu hdM_spliublue";
+                                            }
+
+                                            <span class="@cl">@s</span>
+
+                                            if (countFor6 == 6)
+                                            {
+                                                <span class="Mif_jgC">+</span>
+                                            }
+
+                                        }
+                                    }
+                                    else
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            if (lType == 63 || lType == 64)
+                                            {
+                                                string clazz = "hdM_spPK hdM_spPK" + s;
+                                                <span class="@clazz">@s</span>
+                                            }
+
+                                            else
+                                            {
+                                                <span class="hdM_spssc">@s</span>
+                                            }
+
+                                        }
+                                    }
+
+                                    
+                                }
+                            
+                            
+                            
+
                         </div>
                     </dd>
                 </dl>
