提交聊天功能

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
         	<i><img src="/images/grids_icon_04.png"></i>
             <p>排行</p>
         </a></li>
-    	<li><a href="javascript:;">
+    	<li><a href="/Talking/Index">
         	<i><img src="/images/grids_icon_05.png"></i>
             <p>聊天</p>
         </a></li>
