--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
@@ -26,7 +26,7 @@
 <body style="background:#eee;">
 
     <div class="Other_header">
-        <a href="javascript:;" class="hjc_back" style="z-index: 1;"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back" style="z-index: 1;"></a>
         @if (string.IsNullOrEmpty(Model.Headpath))
         {
             <div class="usercenter-bg"></div>
@@ -176,14 +176,14 @@
                     up: {
                         callback: getListData, 
                         isBounce: false, //此处禁止ios回弹
-                        noMoreSize: 4,
+                        noMoreSize: 1,
                         empty: {
                             icon: "/images/null.png", 
                             tip: "暂无相关数据~", 
-                            btntext: "去逛逛 >", //按钮,默认""
-                            btnClick: function() {
-                                alertmsg("去逛逛");
-                            }
+                            //btntext: "去逛逛 >", //按钮,默认""
+                            //btnClick: function() {
+                            //    alertmsg("去逛逛");
+                            //}
                         },
                         clearEmptyId: clearEmptyId
                     }
