添加聊天链接

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li>
-                <a href="聊天室.html">
+                <a href="/Talking/Index">
                     <i><img src="/images/grids_icon_05.png"></i>
                     <p>聊天</p>
                 </a>
