--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -124,7 +124,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/TakeBet">
                     <div class="Per_listtu f-l"><img src="~/images/39_4.png"></div>
                     <div class="Per_listRight">
                         <h3>参与竞猜</h3>
