--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
@@ -102,14 +102,14 @@
         </div>
         <div class="bottom">
 
-            <span id="clsoe" class="Btnsty_peyton" onclick="hideMask();" >取消</span>
-            <span id="btnZoomIn" class="Btnsty_peyton">+</span>
-            <span id="btnZoomOut" class="Btnsty_peyton">-</span>
+            <span id="clsoe" class="Btnsty_peyton" onclick="hideMask();">取消</span>
+            <span id="btnZoomIn" class="Btnsty_peyton">放大</span>
+            <span id="btnZoomOut" class="Btnsty_peyton">缩小</span>
 
             <span id="btnok" class="Btnsty_peyton">选取</span>
             @*<input type="button" id="btnClose" onclick="hideMask();" value="取消" />
 
-          
+
             <input type="button" id="btnZoomIn"  value="+" />
             <input type="button" id="btnZoomOut"value="-" />
 
@@ -117,8 +117,9 @@
 
 
 
-     </div>
+        </div>
    </div>
+   
 
         <script>
             $(window).load(function () {
