--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
@@ -110,6 +110,35 @@
                 }
 
             });
+            $(".hdNav_cai li").click(function () {
+                var _this = $(this),
+                    i = _this.attr("data-index");
+
+                if (curNavIndex != i) {
+                    _this.addClass("current").siblings().removeClass("current");
+                    //隐藏当前列表和回到顶部按钮
+                    $("#mescroll"+curNavIndex).hide();
+                    mescrollArr[curNavIndex].hideTopBtn();
+                    //显示对应的列表
+                    $("#mescroll"+i).show().siblings().hide();
+                    //取出菜单所对应的mescroll对象,如果未初始化则初始化
+                    if(mescrollArr[i]==null){
+                        mescrollArr[i]=initMescroll("mescroll"+i, "datalist"+i);
+                    }else{
+                        //检查是否需要显示回到到顶按钮
+                        var curMescroll=mescrollArr[i];
+                        var curScrollTop=curMescroll.getScrollTop();
+                        if(curScrollTop>=curMescroll.optUp.toTop.offset){
+                            curMescroll.showTopBtn();
+                        }else{
+                            curMescroll.hideTopBtn();
+                        }
+                    }
+                    //更新标记
+                    curNavIndex=i;
+                }
+
+            });
 
             /*创建MeScroll对象*/
             function initMescroll(mescrollId,clearEmptyId){
