--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/head.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/head.css
@@ -89,8 +89,8 @@
 }
 .Btnsty_peyton{ 
 
-   width: 66px;
-   text-align:center;
+  width: 20%;
+  text-align:center;
   display: inline-block;
   margin-bottom: 10px;
   height: 57px;
@@ -101,7 +101,7 @@
   border-radius: 3px;
   text-decoration: none;
   cursor: pointer;
-  box-shadow: 0px 0px 5px #B0B0B0;
+  /*box-shadow: 0px 0px 5px #B0B0B0;*/
   border: 0px #fff solid;
   
 
