--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -14,10 +14,12 @@
 
 <body style="background:#F4F4F5;">
 
-    <header class="hjc_header">
-        <a href="javascript:;" class="hjc_logo">个人中心</a>
-        <a href="/Personal/Set" class="hjc_Set"></a>
-    </header>
+<header class="hjc_header">
+
+    <a href="/Home/Index" class="hjc_back"></a>
+    <a href="javascript:;" class="hjc_logo">个人中心</a>
+    <a href="/Personal/Set" class="hjc_Set"></a>
+</header>
 
     <div class="Personal_header">
         <div class="Personal_hdInfo1">
@@ -156,7 +158,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Personal/Notice">
                     <div class="Per_listtu f-l"><img src="~/images/39_8.png"></div>
                     <div class="Per_listRight">
                         <h3>消息提醒<font class="Per_xxicon">3</font></h3>
