修复玄机图库浏览页标题显示问题，修复新闻详情解码问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
@@ -40,11 +40,11 @@
             {
                 if (item.Id == currentId)
                 {
-                        <div class="line on">第@(item.Issue)期</div>
+                <div class="line on">第@(item.Issue)期</div>
                     }
                     else
                     {
-                        <div class="line">第@(item.Issue)期</div>
+                <div class="line">第@(item.Issue)期</div>
                     }
                 }
             </div>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="listdetail oh">
-        <div class="listtitle">白小姐高级会员版</div>
+        <div class="listtitle">@Model.Name</div>
         <div class="slick-track oh" id="slick">
             @foreach (var item in galleryList)
             {
@@ -79,7 +79,7 @@
                 {
 
                     <dd>
-                        <a href="@Url.Content("~/News/Gallery/" + @item.Id)">@item.Name</a>
+                        <a href="/News/Gallery/@item.Id">@item.Name</a>
                     </dd>
                 }
             }
