--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -40,7 +40,7 @@
             <span class="article-time">@Model.ReleaseTimeStr</span>
         </div>
         <div class="article-body">
-            @Html.Raw(Model.NewsContent);
+            @Html.Raw( HttpUtility.HtmlDecode(Model.NewsContent));
         </div>
         <div class="article-share">
             <dl>
