--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
@@ -84,7 +84,7 @@
  
         var shareData = {
             title: '邀请注册',
-            desc: '万彩吧邀请注册',
+            desc: '万彩吧，助你壕梦成真！！新用户注册有惊喜',
             // 如果是微信该link的域名必须要在微信后台配置的安全域名之内的。
             link: 'http://'+host,
             icon: 'http://'+img,
