添加计划页高手推荐和免费专家，添加近期竞猜页

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
@@ -77,7 +77,7 @@
             var html = [];
             $.each(data.PageData, function (index, value) {
                 console.log(value);
-                var dl = "<dl class='details_DL'><dt><a href='javascript:;'><img src='"+(value.Headpath.length<= 0 ? '/images/default_avater.png' : value.HeadPath)+"'></a></dt>"
+                var dl = "<dl class='details_DL'><dt><a href='/Personal/UserCenter/" + value.UserId + "'><img src='" + (value.Headpath.length <= 0 ? '/images/default_avater.png' : value.HeadPath) + "'></a></dt>"
                          + "<dd>"
                          + "<div class='fans_ddRight f-r'  onclick='unorfollow(this," + value.UserId + ")'>" + (value.Isfollowed<=0?'<p class=\'fans_Gz\'>关注</p>':'<p class=\'fans_Ygz\'>已关注</p>') + "</div>"
                          + "<div class='details_ddLeft'>"
